--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -16,7 +16,7 @@ pipeline {
                 }
             }
         }
-        stage('Deliver') {
+        stage('Deliver-Alhamdulillah') {
             steps {
                 sh './jenkins/scripts/deliver.sh'
             }
